--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,7 +22,9 @@
     content="Избавьтесь от тревоги за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) с доказанной эффективностью 85%. Онлайн консультации, конфиденциально.">
   {{ $ogImage := resources.Get "images/psychologist-portrait.jpg" }}
   {{ if $ogImage }}
-  <meta property="og:image" content="{{ ($ogImage.Resize " 1200x630").Permalink }}">
+  <meta property="og:image" content="{{ ($ogImage.Fill " 1200x630 Center").Permalink }}">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
   {{ end }}
   <meta property="og:locale" content="ru_RU">
   <meta property="og:site_name" content="{{ .Site.Title }}">
@@ -34,7 +36,7 @@
     content="Избавьтесь от тревоги за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) с доказанной эффективностью 85%.">
   {{ $twitterImage := resources.Get "images/psychologist-portrait.jpg" }}
   {{ if $twitterImage }}
-  <meta name="twitter:image" content="{{ ($twitterImage.Resize " 1200x630").Permalink }}">
+  <meta name="twitter:image" content="{{ ($twitterImage.Fill " 1200x630 Center").Permalink }}">
   {{ end }}
 
   <!-- Schema.org markup -->
