--- a/layouts/index.html
+++ b/layouts/index.html
@@ -66,7 +66,7 @@
         "knowsAbout": ["Когнитивно-поведенческая терапия", "Тревожные расстройства", "Панические атаки", "ОКР", "Психотерапия"],
         "alumniOf": {
           "@type": "Organization",
-          "name": "Московский Государственный Университет им. М.В. Ломоносова"
+          "name": "МИП"
         }
       },
       {
