--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -23,7 +23,8 @@
         </ul>
 
         <div class="pricing-card__cta">
-          <a href="#cta-final" class="btn btn--outline">
+          <a href="#cta-final" class="btn btn--outline"
+             data-cta="scroll-to-cta" data-position="pricing-single">
             Записаться
           </a>
         </div>
@@ -52,7 +53,8 @@
         </ul>
 
         <div class="pricing-card__cta">
-          <a href="#cta-final" class="btn btn--primary">
+          <a href="#cta-final" class="btn btn--primary"
+             data-cta="scroll-to-cta" data-position="pricing-package">
             Купить пакет
           </a>
         </div>
