--- a/layouts/partials/process.html
+++ b/layouts/partials/process.html
@@ -12,7 +12,8 @@
           </p>
           <div class="step__cta">
             <a href="#cta-final"
-               class="btn btn--small">
+               class="btn btn--small"
+               data-cta="scroll-to-cta" data-position="process-step1">
               Записаться на диагностику
             </a>
           </div>
@@ -52,7 +53,8 @@
 
     <div class="process__cta-final">
       <p class="cta-text">Готовы начать? Запишитесь на бесплатную диагностику</p>
-      <a href="#cta-final" class="btn btn--primary">
+      <a href="#cta-final" class="btn btn--primary"
+         data-cta="scroll-to-cta" data-position="process-final">
         Записаться
       </a>
     </div>
