hide contact section until quiz

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer" data-block="footer">
   <div class="container">
     <div class="footer__content">
-      <div class="footer__section">
+      <div class="footer__section" id="footer-contact-section">
         <h3 class="footer__title">Связаться</h3>
         <div class="footer__social-buttons">
           <a href="tg://resolve?domain=happy_habits_ru&text={{ urlquery " Здравствуйте! Хочу записаться на консультацию"
