return index for default landing

--- a/layouts/_default/landing.html
+++ b/layouts/_default/landing.html
@@ -19,7 +19,7 @@
   <link rel="canonical" href="{{ .Permalink }}">
   {{ else }}
   <link rel="canonical" href="{{ .Site.BaseURL }}v/a/">
-  <meta name="robots" content="noindex,follow">
+  <meta name="robots" content="index,follow">
   {{ end }}
 
   <link rel="apple-touch-icon" sizes="180x180" href="{{ "apple-touch-icon.png" | relURL }}">
