add 5 quiz step

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -67,7 +67,7 @@
       </div>
 
       <div class="footer__copyright">
-        <p>&copy; {{ now.Year }} Все права защищены</p>
+        <p><span id="quiz-reset-trigger" style="cursor: default;">&copy;</span> {{ now.Year }} Все права защищены</p>
       </div>
 
       <div class="footer__disclaimer">
